# laser_detection

./: .CMakeLists.txt.swp  CMakeLists.txt  README.md  TODO.md  package.xml
cfg/: .DynConfig.cfg.swp  CloudParams.cfg  ColorParams.cfg  DynConfig.cfg  EvalPoint.cfg  HsxParams.cfg  ImageParams.cfg
launch/: laser_detection.launch  laser_detection.launch~
src/: .GreenDetectionCv.cpp.swp  .GreenDetectionCv.h.swp  .GreenDetectionCv_main.cpp.swp  .GreenDetectionPcl.cpp.swp  .GreenDetectionPcl.h.swp  .GreenDetectionPcl_main.cpp.swp  2  ClickedImg.cpp  ClickedImg.h  ClickedImg_main.cpp  ColorSeg.cpp  ColorSeg.h  ColorSeg_main.cpp  DynCloudSegmentation.cpp  DynCloudSegmentation.h  DynCloudSegmentation_main.cpp  DynImageSegmentation.cpp  DynImageSegmentation.h  DynImageSegmentation_main.cpp  EvalPoint.cpp  EvalPoint.h  EvalPoint_main.cpp  GreenDetectionCv.cpp  GreenDetectionCv.h  GreenDetectionCv_main.cpp  GreenDetectionPcl.cpp  GreenDetectionPcl.h  GreenDetectionPcl_main.cpp  GreenPart2.cpp  GreenPart2.h  GreenPart2_main.cpp  HsxSeg.cpp  HsxSeg.h  HsxSeg_main.cpp  MotionSeg.cpp  MotionSeg.h  MotionSeg_main.cpp  ShapeSeg.cpp  ShapeSeg.h  ShapeSeg_main.cpp  (+4 more)
